Add support Check Payment Term based in total line

--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,5 @@ adempiere.trunk=/opt/Development/workspace/adempiere_370
 project-name=LVE-ADempiere
 
 project.trunk=/opt/Development/workspace/LVE-ADempiere
+fta.trunk=/opt/Development/workspace/FTA
 
