--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="base"/>
 	<classpathentry kind="src" path="patches"/>
 	<classpathentry kind="src" path="zkwebui/WEB-INF/src"/>
+	<classpathentry kind="src" path="client"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="JasperReportsTools/lib/groovy-all-2.0.1.jar"/>
 	<classpathentry kind="lib" path="JasperReportsTools/lib/jasperreports-5.5.0.jar"/>
